--- a/hadis-muslim.html
+++ b/hadis-muslim.html
@@ -194,62 +194,62 @@ nav{position:fixed;top:0;left:0;right:0;z-index:200;height:60px;background:var(-
    Sumber: Daftar resmi Shahih Muslim
 ══════════════════════════════════════════ */
 var KITAB = [
-  {id:1,  ar:'الْإِيمَان',                   id_name:'Iman',                              n:432},
-  {id:2,  ar:'الطَّهَارَة',                  id_name:'Bersuci (Thaharah)',                n:99},
-  {id:3,  ar:'الْحَيْض',                     id_name:'Haid',                              n:130},
-  {id:4,  ar:'الصَّلَاة',                    id_name:'Shalat',                            n:309},
-  {id:5,  ar:'الْمَسَاجِد',                  id_name:'Masjid dan Tempat Shalat',          n:315},
-  {id:6,  ar:'صَلَاةُ الْمُسَافِرِين',       id_name:'Shalat Musafir dan Qashar',         n:311},
-  {id:7,  ar:'الْجُمُعَة',                   id_name:'Shalat Jumat',                      n:62},
-  {id:8,  ar:'صَلَاةُ الْعِيدَيْن',          id_name:'Shalat Dua Hari Raya',             n:26},
-  {id:9,  ar:'صَلَاةُ الِاسْتِسْقَاء',       id_name:'Shalat Istisqa (Minta Hujan)',      n:14},
-  {id:10, ar:'صَلَاةُ الْكُسُوف',            id_name:'Shalat Gerhana',                    n:10},
-  {id:11, ar:'الْجَنَائِز',                  id_name:'Jenazah',                           n:122},
-  {id:12, ar:'الزَّكَاة',                    id_name:'Zakat',                             n:174},
-  {id:13, ar:'الصِّيَام',                    id_name:'Puasa',                             n:257},
-  {id:14, ar:'الِاعْتِكَاف',                 id_name:'Itikaf',                            n:10},
-  {id:15, ar:'الْحَجّ',                      id_name:'Haji',                              n:573},
-  {id:16, ar:'النِّكَاح',                    id_name:'Nikah',                             n:138},
-  {id:17, ar:'الرَّضَاع',                    id_name:'Penyusuan (Radha\'ah)',              n:38},
-  {id:18, ar:'الطَّلَاق',                    id_name:'Talak',                             n:66},
-  {id:19, ar:'اللِّعَان',                    id_name:'Lian',                              n:22},
-  {id:20, ar:'الْعِتْق',                     id_name:'Memerdekakan Budak',                n:13},
-  {id:21, ar:'الْبُيُوع',                    id_name:'Jual Beli',                         n:146},
-  {id:22, ar:'الْمُسَاقَاة',                 id_name:'Musaqah (Bagi Hasil Kebun)',        n:133},
-  {id:23, ar:'اللُّقَطَة',                   id_name:'Barang Temuan (Luqathah)',          n:8},
-  {id:24, ar:'الْهِبَات',                    id_name:'Hibah dan Hadiah',                  n:24},
-  {id:25, ar:'الْوَصِيَّة',                  id_name:'Wasiat',                            n:26},
-  {id:26, ar:'النُّذُور',                    id_name:'Nadzar',                            n:27},
-  {id:27, ar:'الْأَيْمَان',                  id_name:'Sumpah',                            n:56},
-  {id:28, ar:'الْقَسَامَة',                  id_name:'Qasaman dan Qishash',               n:44},
-  {id:29, ar:'الْحُدُود',                    id_name:'Hudud (Hukuman Had)',               n:54},
-  {id:30, ar:'الْأَقْضِيَة',                 id_name:'Peradilan',                         n:20},
-  {id:31, ar:'اللُّقَطَة (2)',               id_name:'Temuan dan Kepemilikan',            n:12},
-  {id:32, ar:'الْجِهَاد',                    id_name:'Jihad dan Peperangan',              n:182},
-  {id:33, ar:'الصَّيْد وَالذَّبَائِح',       id_name:'Berburu dan Sembelihan',            n:62},
-  {id:34, ar:'الْأَضَاحِي',                  id_name:'Kurban (Udhhiyyah)',                n:44},
-  {id:35, ar:'الْأَشْرِبَة',                 id_name:'Minuman',                           n:160},
-  {id:36, ar:'اللِّبَاس وَالزِّينَة',        id_name:'Pakaian dan Perhiasan',             n:145},
-  {id:37, ar:'الْآدَاب',                     id_name:'Adab (Etika Islami)',               n:42},
-  {id:38, ar:'الْأَلْفَاظ مِنَ الْأَدَب',    id_name:'Lafaz dan Etika Berbicara',         n:31},
-  {id:39, ar:'الشِّعْر',                     id_name:'Syair',                             n:15},
-  {id:40, ar:'الرُّؤْيَا',                   id_name:'Mimpi',                             n:30},
-  {id:41, ar:'الْفَضَائِل',                  id_name:'Keutamaan Para Sahabat',            n:208},
-  {id:42, ar:'فَضَائِلُ الصَّحَابَة',        id_name:'Manaqib Sahabat',                  n:244},
-  {id:43, ar:'الْبِرّ وَالصِّلَة',           id_name:'Berbakti dan Silaturahmi',          n:166},
-  {id:44, ar:'الْقَدَر',                     id_name:'Takdir (Qadar)',                    n:36},
-  {id:45, ar:'الْعِلْم',                     id_name:'Ilmu',                              n:21},
-  {id:46, ar:'الذِّكْر وَالدُّعَاء',         id_name:'Dzikir dan Doa',                    n:96},
-  {id:47, ar:'التَّوْبَة',                   id_name:'Taubat',                            n:52},
-  {id:48, ar:'صِفَةُ الْمُنَافِقِين',        id_name:'Sifat-Sifat Munafik',              n:83},
-  {id:49, ar:'صِفَةُ الْقِيَامَة',           id_name:'Sifat Hari Kiamat',                n:60},
-  {id:50, ar:'الْجَنَّة وَالنَّار',          id_name:'Surga dan Neraka',                  n:86},
-  {id:51, ar:'الْفِتَن',                     id_name:'Fitnah (Huru-Hara)',                n:110},
-  {id:52, ar:'الزُّهْد وَالرَّقَائِق',       id_name:'Zuhud dan Kelembutan Hati',         n:75},
-  {id:53, ar:'التَّفْسِير',                  id_name:'Tafsir Al-Qur\'an',                 n:42},
-  {id:54, ar:'الطِّبّ وَالْمَرَض',           id_name:'Pengobatan dan Penyakit',           n:96},
-  {id:55, ar:'السَّلَام',                    id_name:'Salam',                             n:56},
-  {id:56, ar:'أَلْفَاظُ الطَّلَاق',          id_name:'Lafaz Talak',                       n:24},
+  {id:1,s:1,ar:'الْإِيمَان',                   id_name:'Iman',                              n:432},
+  {id:2,s:433,ar:'الطَّهَارَة',                  id_name:'Bersuci (Thaharah)',                n:99},
+  {id:3,s:532,ar:'الْحَيْض',                     id_name:'Haid',                              n:130},
+  {id:4,s:662,ar:'الصَّلَاة',                    id_name:'Shalat',                            n:309},
+  {id:5,s:971,ar:'الْمَسَاجِد',                  id_name:'Masjid dan Tempat Shalat',          n:315},
+  {id:6,s:1286,ar:'صَلَاةُ الْمُسَافِرِين',       id_name:'Shalat Musafir dan Qashar',         n:311},
+  {id:7,s:1597,ar:'الْجُمُعَة',                   id_name:'Shalat Jumat',                      n:62},
+  {id:8,s:1659,ar:'صَلَاةُ الْعِيدَيْن',          id_name:'Shalat Dua Hari Raya',             n:26},
+  {id:9,s:1685,ar:'صَلَاةُ الِاسْتِسْقَاء',       id_name:'Shalat Istisqa (Minta Hujan)',      n:14},
+  {id:10,s:1699,ar:'صَلَاةُ الْكُسُوف',            id_name:'Shalat Gerhana',                    n:10},
+  {id:11,s:1709,ar:'الْجَنَائِز',                  id_name:'Jenazah',                           n:122},
+  {id:12,s:1831,ar:'الزَّكَاة',                    id_name:'Zakat',                             n:174},
+  {id:13,s:2005,ar:'الصِّيَام',                    id_name:'Puasa',                             n:257},
+  {id:14,s:2262,ar:'الِاعْتِكَاف',                 id_name:'Itikaf',                            n:10},
+  {id:15,s:2272,ar:'الْحَجّ',                      id_name:'Haji',                              n:573},
+  {id:16,s:2845,ar:'النِّكَاح',                    id_name:'Nikah',                             n:138},
+  {id:17,s:2983,ar:'الرَّضَاع',                    id_name:'Penyusuan (Radha\'ah)',              n:38},
+  {id:18,s:3021,ar:'الطَّلَاق',                    id_name:'Talak',                             n:66},
+  {id:19,s:3087,ar:'اللِّعَان',                    id_name:'Lian',                              n:22},
+  {id:20,s:3109,ar:'الْعِتْق',                     id_name:'Memerdekakan Budak',                n:13},
+  {id:21,s:3122,ar:'الْبُيُوع',                    id_name:'Jual Beli',                         n:146},
+  {id:22,s:3268,ar:'الْمُسَاقَاة',                 id_name:'Musaqah (Bagi Hasil Kebun)',        n:133},
+  {id:23,s:3401,ar:'اللُّقَطَة',                   id_name:'Barang Temuan (Luqathah)',          n:8},
+  {id:24,s:3409,ar:'الْهِبَات',                    id_name:'Hibah dan Hadiah',                  n:24},
+  {id:25,s:3433,ar:'الْوَصِيَّة',                  id_name:'Wasiat',                            n:26},
+  {id:26,s:3459,ar:'النُّذُور',                    id_name:'Nadzar',                            n:27},
+  {id:27,s:3486,ar:'الْأَيْمَان',                  id_name:'Sumpah',                            n:56},
+  {id:28,s:3542,ar:'الْقَسَامَة',                  id_name:'Qasaman dan Qishash',               n:44},
+  {id:29,s:3586,ar:'الْحُدُود',                    id_name:'Hudud (Hukuman Had)',               n:54},
+  {id:30,s:3640,ar:'الْأَقْضِيَة',                 id_name:'Peradilan',                         n:20},
+  {id:31,s:3660,ar:'اللُّقَطَة (2)',               id_name:'Temuan dan Kepemilikan',            n:12},
+  {id:32,s:3672,ar:'الْجِهَاد',                    id_name:'Jihad dan Peperangan',              n:182},
+  {id:33,s:3854,ar:'الصَّيْد وَالذَّبَائِح',       id_name:'Berburu dan Sembelihan',            n:62},
+  {id:34,s:3916,ar:'الْأَضَاحِي',                  id_name:'Kurban (Udhhiyyah)',                n:44},
+  {id:35,s:3960,ar:'الْأَشْرِبَة',                 id_name:'Minuman',                           n:160},
+  {id:36,s:4120,ar:'اللِّبَاس وَالزِّينَة',        id_name:'Pakaian dan Perhiasan',             n:145},
+  {id:37,s:4265,ar:'الْآدَاب',                     id_name:'Adab (Etika Islami)',               n:42},
+  {id:38,s:4307,ar:'الْأَلْفَاظ مِنَ الْأَدَب',    id_name:'Lafaz dan Etika Berbicara',         n:31},
+  {id:39,s:4338,ar:'الشِّعْر',                     id_name:'Syair',                             n:15},
+  {id:40,s:4353,ar:'الرُّؤْيَا',                   id_name:'Mimpi',                             n:30},
+  {id:41,s:4383,ar:'الْفَضَائِل',                  id_name:'Keutamaan Para Sahabat',            n:208},
+  {id:42,s:4591,ar:'فَضَائِلُ الصَّحَابَة',        id_name:'Manaqib Sahabat',                  n:244},
+  {id:43,s:4835,ar:'الْبِرّ وَالصِّلَة',           id_name:'Berbakti dan Silaturahmi',          n:166},
+  {id:44,s:5001,ar:'الْقَدَر',                     id_name:'Takdir (Qadar)',                    n:36},
+  {id:45,s:5037,ar:'الْعِلْم',                     id_name:'Ilmu',                              n:21},
+  {id:46,s:5058,ar:'الذِّكْر وَالدُّعَاء',         id_name:'Dzikir dan Doa',                    n:96},
+  {id:47,s:5154,ar:'التَّوْبَة',                   id_name:'Taubat',                            n:52},
+  {id:48,s:5206,ar:'صِفَةُ الْمُنَافِقِين',        id_name:'Sifat-Sifat Munafik',              n:83},
+  {id:49,s:5289,ar:'صِفَةُ الْقِيَامَة',           id_name:'Sifat Hari Kiamat',                n:60},
+  {id:50,s:5349,ar:'الْجَنَّة وَالنَّار',          id_name:'Surga dan Neraka',                  n:86},
+  {id:51,s:5435,ar:'الْفِتَن',                     id_name:'Fitnah (Huru-Hara)',                n:110},
+  {id:52,s:5545,ar:'الزُّهْد وَالرَّقَائِق',       id_name:'Zuhud dan Kelembutan Hati',         n:75},
+  {id:53,s:5620,ar:'التَّفْسِير',                  id_name:'Tafsir Al-Qur\'an',                 n:42},
+  {id:54,s:5662,ar:'الطِّبّ وَالْمَرَض',           id_name:'Pengobatan dan Penyakit',           n:96},
+  {id:55,s:5758,ar:'السَّلَام',                    id_name:'Salam',                             n:56},
+  {id:56,s:5814,ar:'أَلْفَاظُ الطَّلَاق',          id_name:'Lafaz Talak',                       n:24},
 ];
 
 var API   = 'https://api.hadith.gading.dev';
@@ -298,29 +298,64 @@ window.pilihKitab = function(id){
 };
 
 /* ── Muat Hadis ── */
+/* Cache: { 'kitabId_page': [hadiths] } */
+var CACHE = {};
+
 function muatHadis(){
   if(!aktif) return;
-  var start = (curPg-1)*PER + 1;
-  var end   = Math.min(curPg*PER, aktif.n);
+  var localStart = (curPg-1)*PER + 1;
+  var localEnd   = Math.min(curPg*PER, aktif.n);
+  var cacheKey   = aktif.id + '_' + curPg;
+
+  if(CACHE[cacheKey]){
+    lastData = CACHE[cacheKey];
+    renderHadis(localStart);
+    return;
+  }
+
   tampilLoading();
-  fetch(API + '/books/muslim?range=' + start + '-' + end)
-    .then(function(r){
-      if(!r.ok) throw new Error('HTTP ' + r.status + ' — ' + r.statusText);
-      return r.json();
-    })
-    .then(function(res){
-      var hadiths = [];
-      if(res && res.data){
-        if(Array.isArray(res.data.hadiths))     hadiths = res.data.hadiths;
-        else if(Array.isArray(res.data.hadith)) hadiths = res.data.hadith;
-        else if(Array.isArray(res.data))         hadiths = res.data;
-      } else if(res && Array.isArray(res.hadiths)){
-        hadiths = res.hadiths;
-      }
+
+  /* Fetch individual per nomor global — endpoint /books/muslim/{number} */
+  var promises = [];
+  for(var n = localStart; n <= localEnd; n++){
+    var globalNum = aktif.s + n - 1;
+    promises.push(
+      fetch(API + '/books/muslim/' + globalNum)
+        .then(function(r){
+          if(!r.ok) throw new Error('HTTP ' + r.status);
+          return r.json();
+        })
+        .then(function(res){
+          if(res && res.data) return res.data;
+          return null;
+        })
+    );
+  }
+
+  Promise.all(promises)
+    .then(function(results){
+      var hadiths = results.filter(function(h){ return h !== null; });
+      CACHE[cacheKey] = hadiths;
       lastData = hadiths;
-      renderHadis(start);
+      renderHadis(localStart);
     })
-    .catch(function(err){ tampilError(err); });
+    .catch(function(err){
+      /* Fallback: range endpoint */
+      var globalStart = aktif.s + localStart - 1;
+      var globalEnd   = aktif.s + localEnd   - 1;
+      fetch(API + '/books/muslim?range=' + globalStart + '-' + globalEnd)
+        .then(function(r){ return r.json(); })
+        .then(function(res){
+          var hadiths = [];
+          if(res && res.data){
+            if(Array.isArray(res.data.hadiths)) hadiths = res.data.hadiths;
+            else if(Array.isArray(res.data))     hadiths = res.data;
+          }
+          lastData = hadiths;
+          renderHadis(localStart);
+        })
+        .catch(function(e){ tampilError(e); });
+    });
 }
 
 /* ── Render ── */
@@ -354,7 +389,7 @@ function renderHadis(startNum){
       '<div class="state-body">API tidak mengembalikan hadis. Coba halaman lain atau periksa koneksi.</div></div>';
   } else {
     lastData.forEach(function(h, i){
-      var num   = startNum + i;
+      var num   = (h.number || h.no || (startNum + i));
       var arab  = (h.arab || h.text_ar || '').trim();
       var trjm  = (h.id   || h.text_id || h.en || h.text_en || '').trim();
       var perawi = (h.chain || h.narrator || '').trim();
