--- a/index.html
+++ b/index.html
@@ -665,80 +665,84 @@
   transition: color 0.2s;
 }
 .popup-close:hover { color: var(--green-deep); }
-
   /* ─── MUSHOLLA & MASJID SEKITAR ─── */
-#sekitar { background: var(--cream); }
-.sekitar-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  gap: 20px;
-  margin-top: 2rem;
-}
-.sekitar-card {
-  background: var(--white);
-  border-radius: 14px;
-  border: 1.5px solid var(--cream-dark);
-  overflow: hidden;
-  text-decoration: none;
-  color: inherit;
-  display: flex;
-  flex-direction: column;
-  transition: transform 0.25s, box-shadow 0.25s, border-color 0.25s;
-}
-.sekitar-card:hover {
-  transform: translateY(-6px);
-  box-shadow: 0 16px 40px rgba(13,59,46,0.12);
-  border-color: var(--green-bright);
-}
-.sekitar-card.sekitar-featured {
-  border-color: var(--gold);
-  box-shadow: 0 6px 24px rgba(201,168,76,0.15);
-}
-.sekitar-card.sekitar-featured:hover {
-  box-shadow: 0 16px 40px rgba(201,168,76,0.25);
-  border-color: var(--gold-light);
-}
-.sekitar-img {
-  width: 100%; height: 160px;
-  object-fit: cover; display: block;
-}
-.sekitar-img-placeholder {
-  width: 100%; height: 160px;
-  background: linear-gradient(135deg, var(--green-deep), var(--green-mid));
-  display: flex; flex-direction: column;
-  align-items: center; justify-content: center; gap: 6px;
-  color: rgba(255,255,255,0.3);
-  font-size: 0.7rem; letter-spacing: 0.06em;
-}
-.sekitar-img-placeholder span { font-size: 2.2rem; opacity: 0.35; }
-.sekitar-body { padding: 14px 16px; }
-.sekitar-name {
-  font-size: 0.9rem; font-weight: 700;
-  color: var(--green-deep); line-height: 1.3;
-  margin-bottom: 4px;
-}
-.sekitar-addr { font-size: 0.75rem; color: var(--text-light); margin-bottom: 8px; }
-.sekitar-type-badge {
-  display: inline-block;
-  font-size: 0.65rem; font-weight: 700;
-  letter-spacing: 0.07em; text-transform: uppercase;
-  padding: 3px 10px; border-radius: 20px;
-  background: rgba(30,138,94,0.1);
-  color: var(--green-bright);
-}
-.sekitar-type-badge.gold { background: rgba(201,168,76,0.15); color: #8a6020; }
-.sekitar-type-badge.green { background: rgba(45,184,122,0.12); color: var(--green-mid); }
-.sekitar-footer { padding: 10px 16px 12px; border-top: 1px solid var(--cream-dark); }
-.sekitar-link { font-size: 0.75rem; font-weight: 600; color: var(--green-bright); letter-spacing: 0.03em; }
-.sekitar-card:hover .sekitar-link { color: var(--green-mid); }
-.sekitar-note {
-  margin-top: 1.5rem; display: flex; align-items: center; gap: 10px;
-  padding: 12px 18px;
-  background: rgba(30,138,94,0.07);
-  border-left: 3px solid var(--green-bright);
-  border-radius: 0 8px 8px 0;
-  font-size: 0.78rem; color: var(--text-light);
-}
+  #sekitar { background: var(--cream); }
+  .sekitar-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    gap: 20px;
+    margin-top: 2rem;
+  }
+  .sekitar-card {
+    background: var(--white);
+    border-radius: 14px;
+    border: 1.5px solid var(--cream-dark);
+    overflow: hidden;
+    text-decoration: none;
+    color: inherit;
+    display: flex;
+    flex-direction: column;
+    transition: transform 0.25s, box-shadow 0.25s, border-color 0.25s;
+  }
+  .sekitar-card:hover {
+    transform: translateY(-6px);
+    box-shadow: 0 16px 40px rgba(13,59,46,0.12);
+    border-color: var(--green-bright);
+  }
+  .sekitar-card.sekitar-featured {
+    border-color: var(--gold);
+    box-shadow: 0 6px 24px rgba(201,168,76,0.15);
+  }
+  .sekitar-card.sekitar-featured:hover {
+    box-shadow: 0 16px 40px rgba(201,168,76,0.25);
+    border-color: var(--gold-light);
+  }
+  .sekitar-card-header {
+    padding: 16px 18px 10px;
+    background: linear-gradient(135deg, var(--green-deep), var(--green-mid));
+    display: flex; align-items: center; justify-content: space-between;
+  }
+  .sekitar-card.sekitar-featured .sekitar-card-header {
+    background: linear-gradient(135deg, #5a3a00, #a07020);
+  }
+  .sekitar-icon { font-size: 1.6rem; }
+  .sekitar-type-badge {
+    font-size: 0.65rem; font-weight: 700;
+    letter-spacing: 0.07em; text-transform: uppercase;
+    padding: 3px 10px; border-radius: 20px;
+    background: rgba(255,255,255,0.15);
+    color: rgba(255,255,255,0.9);
+  }
+  .sekitar-type-badge.gold {
+    background: rgba(201,168,76,0.3);
+    color: var(--gold-light);
+  }
+  .sekitar-type-badge.green {
+    background: rgba(45,184,122,0.25);
+    color: #a0f0c8;
+  }
+  .sekitar-body { padding: 16px 18px; flex: 1; }
+  .sekitar-name {
+    font-size: 0.95rem; font-weight: 700;
+    color: var(--green-deep); margin-bottom: 6px; line-height: 1.3;
+  }
+  .sekitar-addr { font-size: 0.75rem; color: var(--text-light); margin-bottom: 8px; }
+  .sekitar-rating { display: flex; align-items: center; gap: 5px; margin-bottom: 10px; }
+  .sekitar-stars { color: #f5a623; font-size: 0.8rem; }
+  .sekitar-score { font-size: 0.82rem; font-weight: 700; color: var(--text-dark); }
+  .sekitar-count { font-size: 0.72rem; color: var(--text-light); }
+  .sekitar-desc { font-size: 0.8rem; color: var(--text-mid); line-height: 1.7; }
+  .sekitar-footer { padding: 10px 18px 14px; border-top: 1px solid var(--cream-dark); }
+  .sekitar-link { font-size: 0.75rem; font-weight: 600; color: var(--green-bright); letter-spacing: 0.03em; }
+  .sekitar-card:hover .sekitar-link { color: var(--green-mid); }
+  .sekitar-note {
+    margin-top: 1.5rem; display: flex; align-items: center; gap: 10px;
+    padding: 12px 18px;
+    background: rgba(30,138,94,0.07);
+    border-left: 3px solid var(--green-bright);
+    border-radius: 0 8px 8px 0;
+    font-size: 0.78rem; color: var(--text-light);
+  }
 </style>
 </head>
   <!-- JAM DIGITAL -->
@@ -1261,7 +1265,55 @@
         </div>
       </a>
 
-    
+      <!-- Musholla Nurul A'la -->
+      <a href="https://maps.google.com/?q=Musholla+Nurul+Ala+Pondok+Butun+Batulicin" target="_blank" class="sekitar-card">
+        <div class="sekitar-card-header">
+          <span class="sekitar-icon">🏠</span>
+          <div class="sekitar-type-badge green">Musholla & TPA</div>
+        </div>
+        <div class="sekitar-body">
+          <h3 class="sekitar-name">Musholla & TPA Nurul A'la</h3>
+          <div class="sekitar-addr">📍 Pondok Butun, Batulicin</div>
+          <div class="sekitar-rating">
+            <span class="sekitar-stars">★★★★★</span>
+            <span class="sekitar-score">5.0</span>
+            <span class="sekitar-count">(1 ulasan)</span>
+          </div>
+          <p class="sekitar-desc">Musholla sekaligus Taman Pendidikan Al-Qur'an yang berada di kawasan Pondok Butun, dekat Musholla Baiturrahman.</p>
+        </div>
+        <div class="sekitar-footer">
+          <span class="sekitar-link">Lihat di Maps →</span>
+        </div>
+      </a>
+
+      <!-- Musholla Al-Madani -->
+      <a href="https://maps.google.com/?q=Musholla+Al+Madani+Jl+Dharma+Praja+Batulicin" target="_blank" class="sekitar-card">
+        <div class="sekitar-card-header">
+          <span class="sekitar-icon">🏠</span>
+          <div class="sekitar-type-badge green">Musholla</div>
+        </div>
+        <div class="sekitar-body">
+          <h3 class="sekitar-name">Musholla Al-Madani</h3>
+          <div class="sekitar-addr">📍 Jl. Dharma Praja, Pondok Butun</div>
+          <div class="sekitar-rating">
+            <span class="sekitar-stars">—</span>
+            <span class="sekitar-score" style="color:#9a9a9a; font-size:0.78rem">Belum ada ulasan</span>
+          </div>
+          <p class="sekitar-desc">Musholla di kawasan Pondok Butun, Batulicin yang melayani warga sekitar untuk beribadah sehari-hari.</p>
+        </div>
+        <div class="sekitar-footer">
+          <span class="sekitar-link">Lihat di Maps →</span>
+        </div>
+      </a>
+
+    </div>
+
+    <div class="sekitar-note">
+      <span>🌐</span>
+      <span>Data tempat ibadah bersumber dari Google Maps. Klik kartu untuk membuka lokasi langsung di Google Maps.</span>
+    </div>
+  </div>
+</section>
 
 <!-- FOOTER -->
 <footer>
