--- a/index.html
+++ b/index.html
@@ -1188,13 +1188,13 @@
         <div class="sekitar-footer"><span class="sekitar-link">Lihat di Maps →</span></div>
       </a>
 
-      <a href="https://maps.google.com/?q=Masjid+Al-Falah+Gunung+Antasari+Batulicin" target="_blank" class="sekitar-card sekitar-featured">
+      <a href="https://maps.app.goo.gl/rNxZWHy3sKnrDraG8" target="_blank" class="sekitar-card sekitar-featured">
         <!-- Ganti placeholder dengan: <img src="images/masjid-alfalah.jpg" alt="..." class="sekitar-img"> -->
         <div class="sekitar-img-placeholder"><span>🕌</span>Foto Menyusul</div>
         <div class="sekitar-body">
-          <div class="sekitar-name">Masjid Al-Falah</div>
-          <div class="sekitar-addr">📍 Gunung Antasari, Simpang Empat</div>
-          <span class="sekitar-type-badge gold">⭐ Terpopuler</span>
+          <div class="sekitar-name">Masjid Miftahul Khair</div>
+          <div class="sekitar-addr">📍 Gunung Tinggi, Simpang Empat</div>
+          <span class="sekitar-type-badge gold">Masjid</span>
         </div>
         <div class="sekitar-footer"><span class="sekitar-link">Lihat di Maps →</span></div>
       </a>
@@ -1214,7 +1214,7 @@
         <!-- Ganti placeholder dengan: <img src="images/masjid-alihsan.jpg" alt="..." class="sekitar-img"> -->
         <div class="sekitar-img-placeholder"><span>🕌</span>Foto Menyusul</div>
         <div class="sekitar-body">
-          <div class="sekitar-name">Mesjid Al-Ihsan</div>
+          <div class="sekitar-name">Masjid Al-Ihsan</div>
           <div class="sekitar-addr">📍 Kersik Putih, Batulicin</div>
           <span class="sekitar-type-badge">Masjid</span>
         </div>
