--- a/index.html
+++ b/index.html
@@ -1188,7 +1188,7 @@
         <div class="sekitar-footer"><span class="sekitar-link">Lihat di Maps →</span></div>
       </a>
 
-      <a href="https://maps.app.goo.gl/rNxZWHy3sKnrDraG8" target="_blank" class="sekitar-card sekitar-featured">
+      <a href="https://maps.app.goo.gl/rNxZWHy3sKnrDraG8" target="_blank" class="sekitar-card">
         <!-- Ganti placeholder dengan: <img src="images/masjid-alfalah.jpg" alt="..." class="sekitar-img"> -->
         <div class="sekitar-img-placeholder"><span>🕌</span>Foto Menyusul</div>
         <div class="sekitar-body">
