--- a/index.html
+++ b/index.html
@@ -760,7 +760,7 @@
   <li><a href="#kegiatan">Kegiatan</a></li>
   <li><a href="#galeri">Galeri</a></li>
   <li><a href="#lokasi">Lokasi</a></li>
-  <li><a href="#sekitar">Masjid dan Lokasi Disekitar</a></li>
+  <li><a href="#sekitar">Musholla dan Masjid Terdekat</a></li>
   <li><a href="game-islami.html">🎮 Game Islami</a></li>
   <li class="nav-dropdown">
     <a href="#" class="nav-dropdown-toggle">⚡ Fitur Lainnya ▾</a>
@@ -1183,7 +1183,7 @@
         <div class="sekitar-body">
           <div class="sekitar-name">Masjid Agung Nurussalam Tanah Bumbu</div>
           <div class="sekitar-addr">📍 Kawasan Gunung Tinggi, Batulicin</div>
-          <span class="sekitar-type-badge">Masjid Agung</span>
+          <span class="sekitar-type-badge gold">Masjid Agung</span>
         </div>
         <div class="sekitar-footer"><span class="sekitar-link">Lihat di Maps →</span></div>
       </a>
@@ -1194,7 +1194,7 @@
         <div class="sekitar-body">
           <div class="sekitar-name">Masjid Miftahul Khair</div>
           <div class="sekitar-addr">📍 Gunung Tinggi, Simpang Empat</div>
-          <span class="sekitar-type-badge gold">Masjid</span>
+          <span class="sekitar-type-badge">Masjid</span>
         </div>
         <div class="sekitar-footer"><span class="sekitar-link">Lihat di Maps →</span></div>
       </a>
